--- a/src/component/content/_content-compare.scss
+++ b/src/component/content/_content-compare.scss
@@ -9,3 +9,24 @@
         background: no-repeat top center / cover;
     }
 }
+
+@media all and (max-width: map-get($grid-breakpoints, 'lg')){
+    .content-compare{
+        padding: 0 0 map-get($map: $spacers, $key: 4);
+    }
+}
+@media all and (max-width: map-get($grid-breakpoints, 'md')){
+    .content-compare{
+        &__image{
+            height: 290px;
+        }
+    }
+}
+@media all and (max-width: map-get($grid-breakpoints, 'xs')){
+    .content-compare{
+        padding: 0 0 map-get($map: $spacers, $key: 3);
+        &__image{
+            height: 240px;
+        }
+    }
+}
