--- a/src/component/content/_content-form.scss
+++ b/src/component/content/_content-form.scss
@@ -26,3 +26,10 @@
         }
     }
 }
+
+
+@media all and (max-width: map-get($grid-breakpoints, 'xs')){
+    .content-form{
+        padding-top: map-get($map: $spacers, $key: 3);
+    }
+}
