--- a/src/component/footer/footer.pug
+++ b/src/component/footer/footer.pug
@@ -1,7 +1,7 @@
 footer.container
     .footer.container__inner
         .row
-            .col-4.col-xs-12
+            .col-4.col-lg-6.col-xs-12.mb-lg-2
                 //- Logo
                 a(href="https://websoho.ru/" alt="" title="")
                     svg.footer__logo(viewBox="0 0 320 80" preserveAspectRatio="xMidYMin meet" x="0px" y="0px")
@@ -20,7 +20,7 @@ footer.container
                 //- Copyright
                 .footer__copyright 2018-2020 © websoho.ru. Все права защищены. 
                     a.text-underline(href="#") Оферта.
-            .col-4.col-xs-12
+            .col-4.col-lg-6.col-xs-12.mb-lg-2
                 p.footer__title Основные услуги
                 .row
                     .col-6.col-xs-12
@@ -32,12 +32,12 @@ footer.container
                         a.footer__link(href="#") Интернет-маркетинг
                         a.footer__link(href="#") Контекстная реклама
                         a.footer__link(href="#") SEO-продвижение
-            .col-2.col-xs-12
+            .col-2.col-lg-6.col-xs-12.mb-lg-2
                 p.footer__title Блог
                 a.footer__link(href="#") Фриланс = акуна матата?
                 a.footer__link(href="#") Пересядь с иглы плохой рекламы
                 a.footer__link(href="#") Играл со шрифтом в дизайне: проиграл
-            .col-2.col-xs-12
+            .col-2.col-lg-6.col-xs-12
                 p.footer__title Портфолио
                 a.footer__link(href="#") Сайт для «ДИФ Строй-Инжиниринг»
                 a.footer__link(href="#") Вывод сайта в ТОП-10 по высокочастотным запросам
