--- a/src/component/blog/_blog_preview.scss
+++ b/src/component/blog/_blog_preview.scss
@@ -25,21 +25,43 @@
     &__image{
         grid-row: 1/2;
         grid-column: 1/2;
-
         &--full{
             grid-column: 1/3;
         }
     }
 }
+@media all and (max-width: map-get($grid-breakpoints, 'lg')){
+    .blog_preview{
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+    }
+}
+@media all and (max-width: map-get($grid-breakpoints, 'md')){
+    .blog_preview{
+        &__item{
+            grid-template-columns: 80px 1fr;
+            margin-bottom: map-get($map: $spacers, $key: 3);
 
+            &:last-child{
+                margin-bottom: 0;
+            }
 
-@media all and (max-width: map-get($grid-breakpoints, 'xs')){
+            &--full{
+                display: grid;
+                grid-row: 1/2;
+            }
+        }
+    }
+}
+@media all and (max-width: map-get($grid-breakpoints, 'sm')){
     .blog_preview{
         display: block;
-
+    }
+}
+@media all and (max-width: map-get($grid-breakpoints, 'xs')){
+    .blog_preview{
         &__item{
-            display: block;
-            margin-bottom: map-get($map: $spacers, $key: 3);
+            grid-template-columns: 60px 1fr;
         }
         &__image{
             margin-bottom: $spacer/2;
