--- a/src/tilda.pug
+++ b/src/tilda.pug
@@ -159,6 +159,8 @@ html(lang="ru")
                 .modal.modal_portfolio#portfolio-guest
                     img.img-fluid(src="../demo/presentation-guest.jpg")
                     img.img-fluid(src="../demo/demo-guest.jpg")
+                .modal.modal_portfolio#portfolio-store
+                    img.img-fluid(src="../demo/presentation-store.jpg")
                 //- Price
                 .row.pt-2.pb-2
                     .col-4.col-lg-8.col-md-10.col-sm-12.mb-lg-3.text-grey
