--- a/src/component/form/_form.scss
+++ b/src/component/form/_form.scss
@@ -1,6 +1,11 @@
 .form{
     margin: 0;
 
+    &__validation{
+        font-size: 12px;
+        margin-bottom: $spacer/4;
+    }
+
     &__agree{
         font-size: 12px;
         color: $grey;
