--- a/src/component/form/_jGrowl.scss
+++ b/src/component/form/_jGrowl.scss
@@ -24,26 +24,26 @@
             position: absolute;
             top: 10px;
             right: 10px;
-            font-size: 30px;
+            font-size: 21px;
             line-height: 30px;
             width: 34px;
             text-align: center;
-            border-radius: 0 0 0 15px;
+            border-radius: 0;
             color: #fff;
             outline: 0
         }
 
         &.af-message-success {
-            background-color: #f9fcf7!important;
+            background-color: #fff!important;
             .jGrowl-close {
-                // background: $grey;
+                background: $green;
             }
         }
 
         &.af-message-error {
-            background-color: #fef8f8!important;
+            background-color: #fff!important;
             .jGrowl-close {
-                background: #df0a0a;
+                background: $red;
             }
         }
     }
