--- a/src/component/framework/_framework.scss
+++ b/src/component/framework/_framework.scss
@@ -109,6 +109,7 @@ table{
 
 .text-uppercase{text-transform: uppercase;}
 .text-bold,strong,b{font-weight: 700;}
+.text-underline{text-decoration: underline;}
 
 .text-small,small,.small{font-size: 0.9rem;}
 .text-lead,.lead{font-size: 1.2rem;}
