--- a/src/component/content/_content-compare.scss
+++ b/src/component/content/_content-compare.scss
@@ -1,10 +1,10 @@
 .content-compare{
-    padding: 0 0 map-get($map: $spacers, $key: 5);
+    padding: map-get($map: $spacers, $key: 5) 0;
 
     &__image{
         width: 100%;
-        height: 480px;
-        max-height: 100vh;
+        height: 560px;
+        // max-height: 100vh;
 
         background: no-repeat top center / cover;
     }
@@ -12,7 +12,7 @@
 
 @media all and (max-width: map-get($grid-breakpoints, 'lg')){
     .content-compare{
-        padding: 0 0 map-get($map: $spacers, $key: 4);
+        padding: map-get($map: $spacers, $key: 4) 0;
     }
 }
 @media all and (max-width: map-get($grid-breakpoints, 'md')){
@@ -24,7 +24,7 @@
 }
 @media all and (max-width: map-get($grid-breakpoints, 'xs')){
     .content-compare{
-        padding: 0 0 map-get($map: $spacers, $key: 3);
+        padding: map-get($map: $spacers, $key: 3) 0;
         &__image{
             height: 240px;
         }
