--- a/src/component/content/_content-main.scss
+++ b/src/component/content/_content-main.scss
@@ -1,61 +1,62 @@
 .content-main{
-    padding: map-get($map: $spacers, $key: 3) 0;
+    position: relative;
+    padding: map-get($map: $spacers, $key: 3);
+    // background-image: linear-gradient( $purple, $blue);
+    // border-radius: $spacer/2;
+    border: 1px solid $border-color;
 
     &__title{
-        padding-top: map-get($map: $spacers, $key: 2);
-        
-        width: 740px;
+        font-size: 82px;
+        text-indent: 160px;
         max-width: 100%;
+
+        &_secondary{
+            font-size: 42px;
+        }
+    }
+    &__subtitle{
+        // width: 120px;
+
+        position: absolute;
+        top: map-get($map: $spacers, $key: 3);
+        left: map-get($map: $spacers, $key: 3);
+
+        text-align: right;
+        padding: 4px 6px;
+        border: 4px solid $green;
+        color: $green;
+        // transform: translateY(12px);
+
+        &:after{
+            border: 10px solid transparent;
+            border-top: 10px solid $green;
+            border-right: none;
+
+            position: absolute;
+            bottom: -24px;
+            right: -4px;
+
+            content: '';
+        }
     }
     &__intro{
         width: 380px;
         max-width: 90%;
-        color: $light-grey;
+        color: $grey;
+        margin-bottom: map-get($map: $spacers, $key: 2);
     }
-    &__action{
-        position: relative;
-        padding: map-get($map: $spacers, $key: 4) 0 map-get($map: $spacers, $key: 2);
-        
-        &-main{
-            position: absolute;
-            bottom: -70px;
-            left: 170px;
-            width: 570px;
-            z-index: -1;
+    &__list{
+        color: $grey;
+        margin-bottom: map-get($map: $spacers, $key: 1);
+
+        &:last-child{
+            margin-bottom: 0;
         }
-    }
-    &__preview{
-        position: relative;
-        max-width: 100%;
-    }
-    &__prototype{
-        position: relative;
-        z-index: 1;
 
-        width: 300px;
-        max-width: 100%;
-    }
-    &__example{
-        position: absolute;
-        z-index: 2;
-
-        bottom: $spacer;
-        right: $grid-gutter-width/2;
-
-        width: 460px;
-        max-width: 100%;
-
-        box-shadow: 4px 0 8px rgba(0, 0, 0, 0.5);
-    }
-    &__sale{
-        position: absolute;
-        z-index: 3;
-
-        bottom: -$spacer;
-        left: -$spacer;
-
-        width: 160px;
-        transform: rotate(-15deg);
+        &:before{
+            content: '—';
+            margin-right: $spacer/4;
+        }
     }
 }
 @media all and (max-width: map-get($grid-breakpoints, 'lg')){
@@ -66,31 +67,12 @@
         &__intro{
             width: 440px;
         }
-        &__action{
-            &-main{
-                bottom: -30px;
-                left: 220px;
-                width: 280px;
-            }
-        }
     }
 }
 @media all and (max-width: map-get($grid-breakpoints, 'md')){
     .content-main{
         &__title{
             margin-top: 2*$spacer;
-        }
-        &__action{
-            padding-top: $spacer/2;
-            &-main{
-                display: none;
-            }
-        }
-        &__example{
-            right: -$grid-gutter-width/3;
-        }
-        &__sale{
-            width: 120px;
         }
     }
 }
@@ -100,49 +82,12 @@
             margin-top: $spacer;
             font-size: 32px;
         }
-        &__image{
-            margin-top: $spacer;
-        }
-        &__prototype{
-            width: 200px;
-            margin-left: $spacer/2;
-        }
-        &__sale{
-            left: -$spacer/2;
-            bottom: -$spacer/2;
-        }
-        &__example{
-            bottom: 60px;
-            right: 0px;
-        }
     }
 }
 @media all and (max-width: map-get($grid-breakpoints, 'xs')){
     .content-main{
         &__title{
             margin-top: $spacer/2;
-        }
-        &__action{
-            padding-top: 0;
-            padding-bottom: 0;
-            .btn{
-                width: 100%;
-            }
-        }
-        &__image{
-            margin-top: $spacer;
-        }
-        &__prototype{
-            display: none;
-        }
-        &__example{
-            position: inherit;
-            max-width: 100%;
-        }
-        &__sale{
-            width: 80px;
-            left: -$spacer/4;
-            bottom: -$spacer/2;
         }
     }
 }
