--- a/src/component/footer/footer.pug
+++ b/src/component/footer/footer.pug
@@ -3,41 +3,36 @@ footer.container
         .row
             .col-4.col-lg-6.col-xs-12.mb-lg-2
                 //- Logo
-                a(href="https://websoho.ru/" alt="" title="")
-                    svg.footer__logo(viewBox="0 0 320 80" preserveAspectRatio="xMidYMin meet" x="0px" y="0px")
-                        path.footer__logo__path(d="M121.6,1.6C102,1.6,86.2,17.5,86.2,37s15.9,35.4,35.4,35.4S157,56.6,157,37v0C157,17.5,141.2,1.6,121.6,1.6z M121.6,46.9   c-5.4,0-9.8-4.4-9.8-9.8s4.4-9.8,9.8-9.8c5.4,0,9.8,4.4,9.8,9.8C131.4,42.5,127,46.9,121.6,46.9C121.6,46.9,121.6,46.9,121.6,46.9   L121.6,46.9z")
-                        path.footer__logo__path(d="M270.1,1.6c-19.6,0-35.4,15.9-35.4,35.4c0,19.6,15.9,35.4,35.4,35.4c19.6,0,35.4-15.9,35.4-35.4v0   C305.5,17.5,289.6,1.6,270.1,1.6z M270.1,46.9c-5.4,0-9.8-4.4-9.8-9.8s4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8l0,0   C279.9,42.5,275.5,46.9,270.1,46.9C270.1,46.9,270.1,46.9,270.1,46.9L270.1,46.9z")
-                        g
-                            rect.footer__logo__path(x="167.6" y="1.6" width="56.7" height="33.5")
-                            rect.footer__logo__path(x="167.6" y="40" width="56.7" height="32.5")
-                        path.footer__logo__path(d="M133.2,1.6")
-                        g
-                            path.footer__logo__path(d="M23.9,1.8c1.9-0.6,3.5,0.5,5.1,1.8c7.7,6.3,15.3,12.4,23,18.7c5.3,4.3,10.6,8.6,15.7,13.1c4.5,4,7.5,8.9,7.5,15.2    C75.4,58,71.6,65,65.2,68.9c-4,2.5-8.7,3.7-13.5,3.6c-0.9,0-1.9-0.3-2.6-0.9c-8.9-6.4-17.8-12.9-26.5-19.5    c-6-4.4-11.4-9.5-16-15.4c-4.2-5.2-5.8-12-4.2-18.6c1.2-5.3,4.6-9.9,9.3-12.7C15.2,3.1,19.5,1.8,23.9,1.8z")
-                            path.footer__logo__path(d="M40.2,72.4H2.7V42.4L40.2,72.4z")
-                            path.footer__logo__path(d="M70.7,1.7v28.5L36,1.7H70.7z")
+                a(href="https://novatti.ru/" title="Novatti - разработка сайтов, реклама и продвижение.")
+                    svg.footer__logo(preserveAspectRatio="xMinYMin meet" viewBox="0 0 390 85" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink")
+                        path.footer__logo-path(d="M373.438,20.246 C367.838,20.246 363.438,15.846 363.438,10.247 C363.438,4.647 367.838,0.247 373.438,0.247 C379.038,0.247 383.438,4.647 383.438,10.247 C383.438,15.846 379.038,20.246 373.438,20.246 ZM381.438,94.245 L365.438,94.245 L365.438,26.246 L357.438,26.246 L357.438,24.246 L381.438,24.246 L381.438,94.245 ZM339.041,94.245 C328.041,94.245 337.374,94.245 323.041,94.245 L323.041,26.246 L313.041,26.246 L313.041,24.246 L323.041,24.246 L323.041,10.846 L339.041,0.247 L339.041,24.246 L351.040,24.246 L351.040,26.246 L339.041,26.246 L339.041,94.245 ZM297.643,94.245 C287.643,94.245 293.644,94.245 281.644,94.245 L281.644,26.246 L271.644,26.246 L271.644,24.246 L281.644,24.246 L281.644,10.846 L297.643,0.247 L297.643,24.246 L309.643,24.246 L309.643,26.246 L297.643,26.246 L297.643,94.245 ZM220.846,76.445 L242.446,61.846 L242.446,42.246 C242.446,30.446 239.046,25.246 232.446,25.246 C227.446,25.246 221.646,27.246 218.646,31.246 C224.446,31.246 228.446,35.246 228.446,40.246 C228.446,45.246 224.446,49.246 219.446,49.246 C214.446,49.246 210.446,45.246 210.446,40.246 C210.446,30.846 220.446,23.246 232.446,23.246 C245.646,23.246 258.446,30.846 258.446,50.246 L258.446,94.704 L206.881,95.007 C209.285,85.314 220.846,76.445 220.846,76.445 ZM242.446,94.704 L242.446,64.646 L228.046,74.645 C224.233,77.187 222.728,83.860 222.483,94.909 L242.446,94.704 ZM193.444,33.846 L180.000,94.000 L162.000,94.000 L145.645,26.246 L137.645,26.246 L137.645,24.246 L169.644,24.246 L169.644,26.246 L161.444,26.246 L177.644,93.845 L193.044,26.246 L185.244,26.246 L185.244,24.246 L204.644,24.246 L204.644,26.246 C198.244,26.246 194.644,28.646 193.444,33.846 ZM115.644,50.246 C115.644,32.446 112.244,25.246 105.644,25.246 C99.044,25.246 95.644,32.446 95.644,50.246 L95.644,94.245 L79.644,94.245 L79.644,50.246 C79.644,31.246 92.444,23.246 105.644,23.246 C118.844,23.246 131.644,31.246 131.644,50.246 L131.644,94.245 L115.644,94.245 L115.644,50.246 ZM44.644,35.246 C44.644,30.046 42.644,26.446 38.644,26.446 C33.044,26.446 24.644,33.846 24.644,40.846 L24.644,94.245 L8.644,94.245 L8.644,26.246 L0.645,26.246 L0.645,24.246 L24.644,24.246 L24.644,33.646 C27.244,29.246 34.444,23.246 42.644,23.246 C55.444,23.246 60.644,30.646 60.644,44.246 L60.644,94.245 L44.644,94.245 L44.644,35.246 Z")
                 .footer__offer Веб-разработка, реклама, продвижение.
-                a.footer__email(href="mailto:work@websoho.ru") work@websoho.ru
+                a.footer__email(href="mailto:work@websoho.ru") work@novatti.ru
                 //- Copyright
-                .footer__copyright 2018-2020 © websoho.ru. Все права защищены. 
+                .footer__copyright 2021 © novatti.ru. Все права защищены. 
                     a.text-underline(href="#") Оферта.
-            .col-4.col-lg-6.col-xs-12.mb-lg-2
+            .col-6.col-lg-12.col-xs-12.mb-lg-2
                 p.footer__title Основные услуги
                 .row
-                    .col-6.col-xs-12
-                        a.footer__link(href="#") Сайт под ключ
-                        a.footer__link(href="#") Верстка и разработка
-                        a.footer__link(href="#") Графический дизайн
-                        a.footer__link(href="tilda.html") Сайт на Tilda
-                    .col-6.col-xs-12
-                        a.footer__link(href="#") Интернет-маркетинг
-                        a.footer__link(href="#") Контекстная реклама
-                        a.footer__link(href="#") SEO-продвижение
-            .col-2.col-lg-6.col-xs-12.mb-lg-2
-                p.footer__title Блог
-                a.footer__link(href="#") Фриланс = акуна матата?
-                a.footer__link(href="#") Пересядь с иглы плохой рекламы
-                a.footer__link(href="#") Играл со шрифтом в дизайне: проиграл
-            .col-2.col-lg-6.col-xs-12
+                    .col-4.col-xs-12
+                        a.footer__link(href="") Сайт на Тильда
+                        a.footer__link(href="") Сайт под ключ
+                        a.footer__link(href="") Разработка логотипа
+                        a.footer__link(href="") Создание фирменного стиля
+                        a.footer__link(href="") Презентации
+                    .col-4.col-xs-12
+                        a.footer__link(href="") Рассылки: дизайн и верстка
+                        a.footer__link(href="") Полиграфия
+                        a.footer__link(href="") Реклама в Яндекс и Гугл
+                        a.footer__link(href="") Таргетированная реклама
+                        a.footer__link(href="") Упаковка продукта
+                    .col-4.col-xs-12
+                        a.footer__link(href="") Контент
+                        a.footer__link(href="") SEO
+                        a.footer__link(href="") Тех.поддержка сайта
+                        a.footer__link(href="") Анализ сайта
+                        a.footer__link(href="") Управление репутацией
+            .col-2.col-lg-12.col-xs-12
                 p.footer__title Портфолио
                 a.footer__link(href="#") Сайт для «ДИФ Строй-Инжиниринг»
                 a.footer__link(href="#") Вывод сайта в ТОП-10 по высокочастотным запросам
