--- a/src/component/framework/_container.scss
+++ b/src/component/framework/_container.scss
@@ -1,13 +1,13 @@
 .container {
   width: 100%;
   max-width: map-get($container-max-widths, 'xl');
-  padding-right: 2*$grid-gutter-width;
-  padding-left: $grid-gutter-width/2;
+  padding-left: 2*$grid-gutter-width;
+  padding-right: $grid-gutter-width/2;
   margin-right: auto;
   margin-left: auto;
 
   &__inner{
-    margin-left: 120px;
+    margin-right: 120px;
   }
 }
 .row{
@@ -29,15 +29,15 @@
 @media all and (max-width: map-get($grid-breakpoints, 'lg')){
   .container{
     &__inner{
-      margin-left: 80px;
+      margin-right: 80px;
     }
   }
 }
 @media all and (max-width: map-get($grid-breakpoints, 'xs')){
   .container{
-    padding-right: $grid-gutter-width;
+    padding-left: $grid-gutter-width;
     &__inner{
-      margin-left: $spacer;
+      margin-right: $spacer;
     }
   }
 }
