--- a/src/component/item/_item_price.scss
+++ b/src/component/item/_item_price.scss
@@ -7,7 +7,8 @@
     color: $black;
     padding: $grid-gutter-width;
 
-    width: 795px;
+    // width: 795px;
+    width: 100%;
     max-width: 100%;
     
     transition: .4s;
