--- a/src/component/mixin.pug
+++ b/src/component/mixin.pug
@@ -1,37 +1,17 @@
-mixin advantage(name, id)
-    .col-4.col-lg-6.col-sm-4
-        a.advantage.advantage_modal(data-fancybox="advantage" data-src=id href="javascript;")
-            span.advantage__button
-                svg.advantage__icon(width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg")
-                    path(d="M15 13H14V10.7L7.3 17.4L6.6 16.7L13.3 10H11V9H15V13ZM20 16H11L12 15H19V5H9V12L8 13V4H20V16ZM6 9V10H4V20H14V18H15V21H3V9H6Z" fill="#EF002B")
-            h4.advantage__title= name
-            if block
-                block
-            else
-                p.advantage__intro Lorem ipsum dolor sit amet. Itaque earum rerum facilis est laborum. Esse, quam nihil molestiae non recusandae.
-
-mixin product(name, id)
-    .col-3.col-lg-4.col-sm-3.mb-1
-        a.product-item(data-fancybox data-src=id href="javascript;")
-            .product-item__image(style!=attributes.style)
-            p.product-item__title= name
-            p.product-item__link Больше о продукции —
-            svg.product-item__icon(width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg")
-                path(d="M15 13H14V10.7L7.3 17.4L6.6 16.7L13.3 10H11V9H15V13ZM20 16H11L12 15H19V5H9V12L8 13V4H20V16ZM6 9V10H4V20H14V18H15V21H3V9H6Z" fill="#EF002B")
-
-mixin link-modal(name)
-    a.link-modal(href="javascript;" data-fancybox="" data-src="#info")(class!=attributes.class)
-        svg.link-modal__icon(width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg")
-            path(d="M15 13H14V10.7L7.3 17.4L6.6 16.7L13.3 10H11V9H15V13ZM20 16H11L12 15H19V5H9V12L8 13V4H20V16ZM6 9V10H4V20H14V18H15V21H3V9H6Z" fill="#EF002B")
-        span= name
-
-mixin step(id, name, intro)
-    .col-3.col-sm-12
-        .step(class!=attributes.class)
-            span.step__number= id
-                <svg class="step__icon" width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect x="4.5" y="4.5" width="16" height="16" stroke="#D4031D"/>
-                    <rect x="9" y="9" width="7" height="7" fill="#D4031D"/>
-                </svg>
-            p.step__title= name
-            p.step__intro= intro
+mixin advantage(name)
+    .col-6.mb-2
+        .item.item_advantage
+            svg.item__icon.item_advantage__positive(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve")
+                path(d="M87.6,16c-4.7-5-11.2-7.9-18-7.9c-6.8,0-13.4,2.9-18,7.9L50,17.7L48.4,16c-9.3-10-24.8-10.5-34.8-1.3    c-0.4,0.4-0.9,0.8-1.3,1.3c-9.8,10.6-9.8,26.9,0,37.5l35.3,37.2c1.2,1.3,3.3,1.3,4.5,0.1c0,0,0.1-0.1,0.1-0.1l35.3-37.2    C97.5,43,97.5,26.6,87.6,16z")
+            .item_advantage__title!= name
+mixin no-advantage(name)
+    .col-12.col-sm-6.mb-2
+        .item.item_advantage.item_advantage--inverse
+            svg.item__icon.item_advantage__negative(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve")
+                path(d="M15.5,65.7C9.3,60.1,4.7,52.8,2.8,44.5C1.3,38.5,2,35.1,2,35.1c1.2-13.6,10.8-24.9,24.1-24.9c8.3,0,15.2,4.4,19.4,11l0,0L31.8,41.2l26.7,3.6L37.5,64L53,73.7l-6.7,20L15.5,65.7z M97.1,44.5c-1.9,8.3-6.5,15.6-12.7,21.2L54.9,92l6.6-19.9l-13.9-8.7l23.2-21.3l-28.6-3.8c0,0,6.3-11.2,8.7-14.7c5.1-7.8,12.5-13.4,21.8-13.4c13.3,0,23.9,11.4,25.1,24.9C97.9,35.1,98.5,38.5,97.1,44.5z")
+            .item_advantage__title.item_advantage__title--inverse!= name
+mixin portfolio(href, image, subtitle, title)
+    a.portfolio__col(href="javascript:;" data-fancybox="portfolio" data-src=href)
+        img.img-fluid(src=image )
+        p.portfolio__subtitle= subtitle
+        p.portfolio__title= title
